# mavka-did

./: Cargo.toml  README.md  api.wai  wasmer.toml
examples/: composite.rs  logical_node.rs  primitives.rs
src/: api_trait_impls.rs  lib.rs  node.rs
src/_parser_old/: boxed_ast_node.rs  dictionary_entry_node.rs  empty_node.rs  list_node.rs  object_entry_node.rs  object_node.rs  text_node.rs
src/parser/: ast.rs  dictionary_entry_node.rs  dictionary_node.rs  empty_node.rs  grammar.pest  list_node.rs  logical_node.rs  mod.rs  number_node.rs  object_entry_node.rs  text_node.rs
