[package]
name = "mavka-did"
version = "0.3.1"
edition = "2021"
description = "Парсер для формату Дід"
repository = "https://github.com/DanikVitek/did-wai"
authors = ["DanikVitek"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "danikvitek"
abi = "none"
bindings = { wai-version = "0.1.0", exports = "api.wai" }

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["is_variant", "unwrap"] }
pest = "2.6.0"
pest_derive = "2.6.0"
wai-bindgen-rust = { version = "0.2.3", default-features = false, features = ["macros", "wai-bindgen-rust-impl"], optional = true }

[features]
default = []
wasm = ["dep:wai-bindgen-rust"]
